syntax = "proto3";

package profile_to_product;

import "ProfileToProductMessages.proto";

service ProfileToProduct {
  rpc GetDanceCategories(DanceCategoriesIdsRequest) returns (GetDanceCategoriesResponse);
};